--- a/extended_mapping_msgs/package.xml
+++ b/extended_mapping_msgs/package.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>nav2_msgs</name>
-  <version>1.1.0</version>
-  <description>Messages and service files for the Nav2 stack</description>
-  <maintainer email="michael.jeronimo@intel.com">Michael Jeronimo</maintainer>
-  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
-  <maintainer email="carlos.a.orduno@intel.com">Carlos Orduno</maintainer>
+  <name>extended_mapping_msgs</name>
+  <version>0.1</version>
+  <description>Service files to load and save extended map information</description>
+  <maintainer email="i.lopezv.2019@alumnos.urjc.es">Iván Lópezz Broceño</maintainer>
   <license>Apache-2.0</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
@@ -17,9 +15,9 @@
   <depend>builtin_interfaces</depend>
   <depend>rosidl_default_generators</depend>
   <depend>geometry_msgs</depend>
-  <depend>action_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>grid_map_msgs</depend>
+  <depend>octomap_msgs</depend>
   
   <member_of_group>rosidl_interface_packages</member_of_group>
 
