changed names across all the files and namespaces
Signed-off-by: ivrolan <ivanlpzbrc01@gmail.com>

--- a/extended_map_server/CMakeLists.txt
+++ b/extended_map_server/CMakeLists.txt
@@ -159,8 +159,8 @@ if(WIN32)
     YAML_CPP_DLL)
 endif()
 
-rclcpp_components_register_nodes(${library_name} "nav2_map_server::MapSaver")
-rclcpp_components_register_nodes(${library_name} "nav2_map_server::MapServer")
+rclcpp_components_register_nodes(${library_name} "extended_map_server::MapSaver")
+rclcpp_components_register_nodes(${library_name} "extended_map_server::MapServer")
 
 install(TARGETS
     ${library_name} ${map_io_library_name}
