--- a/extended_map_server/package.xml
+++ b/extended_map_server/package.xml
@@ -5,7 +5,7 @@
   <version>0.1.0</version>
   <description>
     Extended map server for ROS 2 Navigation in order to incorporate elevation and obstacle information in 3D.
-    Based on the original nav2_map_server
+    Based on the original extended_map_server
   </description>
   <maintainer email="i.lopezb.2019@alumnos.urjc.es">Iván López Broceño</maintainer>
   <license>Apache-2.0</license>
