fixed CMakeLists.txt for services
Signed-off-by: ivrolan <ivanlpzbrc01@gmail.com>

--- a/extended_mapping_msgs/CMakeLists.txt
+++ b/extended_mapping_msgs/CMakeLists.txt
@@ -13,8 +13,8 @@ find_package(octomap_msgs REQUIRED)
 
 
 rosidl_generate_interfaces(${PROJECT_NAME}
-  "srv/LoadMap.srv"
-  "srv/SaveMap.srv"
+  "srv/ExtendedLoadMap.srv"
+  "srv/ExtendedSaveMap.srv"
   DEPENDENCIES builtin_interfaces geometry_msgs std_msgs nav_msgs grid_map_msgs octomap_msgs
 )
 
