added extended_mapping_msgs dependency
Signed-off-by: ivrolan <ivanlpzbrc01@gmail.com>

--- a/extended_map_server/CMakeLists.txt
+++ b/extended_map_server/CMakeLists.txt
@@ -25,6 +25,7 @@ find_package(grid_map_core REQUIRED)
 find_package(octomap REQUIRED)
 find_package(octomap_msgs REQUIRED)
 find_package(octomap_ros REQUIRED)
+find_package(extended_mapping_msgs REQUIRED)
 
 nav2_package()
 
